[package]
name = "vibrato-pipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive"] }
num_cpus = "1.16.0"
once_cell = "1.19.0"
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
vibrato = "0.5.1"
zstd = "0.13.1"
